--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="nav_item_color">#3B82F6</color>
+    <color name="gray">#BDBDBD</color>
+    <color name="purple_500">#6200EE</color>
 </resources>
