--- a/app/src/main/res/layout/fragment_admin_promotions.xml
+++ b/app/src/main/res/layout/fragment_admin_promotions.xml
@@ -40,27 +40,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_search_box"
-        android:padding="8dp"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:background="@drawable/bg_search_box"
+        android:padding="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@android:drawable/ic_menu_search"
+            android:src="@drawable/ic_search"
+            android:layout_gravity="center_vertical"
             app:tint="@color/gray" />
 
         <EditText
-            android:id="@+id/edtSearchPromotion"
+            android:id="@+id/etSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:hint="Tìm kiếm"
             android:background="@android:color/transparent"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/black"
             android:inputType="text"
-            android:textSize="16sp" />
+            android:textSize="14sp"/>
     </LinearLayout>
+
 
     <!-- Danh sách khuyến mãi -->
     <ScrollView
