--- a/app/src/main/res/layout/activity_add_tour.xml
+++ b/app/src/main/res/layout/activity_add_tour.xml
@@ -2,8 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="#F8FAFC">
+    android:background="#F8FAFC"
+    android:padding="16dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -15,17 +15,16 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="#1E293B"
-            android:layout_marginBottom="16dp"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp" />
 
         <EditText
             android:id="@+id/etTourName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Tên tour"
-            android:inputType="text" />
+            android:hint="Tên tour" />
 
         <EditText
             android:id="@+id/etDescription"
@@ -41,7 +40,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Địa điểm"
-            android:inputType="text"
             android:layout_marginTop="8dp" />
 
         <EditText
@@ -84,23 +82,21 @@
             android:focusable="false"
             android:layout_marginTop="8dp" />
 
-        <!-- Chọn ảnh -->
         <Button
             android:id="@+id/btnChooseImages"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Chọn ảnh"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="12dp" />
 
         <TextView
             android:id="@+id/tvImageCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Chưa chọn ảnh nào"
-            android:layout_marginTop="4dp"
-            android:textColor="#475569" />
+            android:textColor="#475569"
+            android:layout_marginTop="4dp" />
 
-        <!-- Nút -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -131,6 +127,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
